--- a/pdf-forms-for-contact-form-7/html/settings_panel.html
+++ b/pdf-forms-for-contact-form-7/html/settings_panel.html
@@ -101,12 +101,13 @@
 					<td class="pdf-field"><input type="text" class="pdf-value" /></td>
 					<td class="buttons">
 						<a class="button button-small delete-valuemapping-button" href="#">{delete}</a>
+						<a class="button button-small delete-all-valuemappings-button" href="#">{delete-all}</a>
 					</td>
 				</tr>
 				<tr class="delete-all-row">
 					<td colspan="3"></td>
 					<td class="buttons">
-						<a class="button button-small delete-all-mappings-button" href="#">{delete-all-mappings}</a>
+						<a class="button button-small delete-all-mappings-button" href="#">{delete-all}</a>
 					</td>
 				</tr>
 			</tbody>
